# finance_app

./: .env  Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
accounts/: forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_operations.py  0003_alter_operations_date.py  0004_rename_operations_operation.py
accounts/templates/: accounts.html  activate_account.html  add_money.html  money_transfer.html  operations.html  send_money.html
credits/: apps.py  forms.py  models.py  schedule.py  serializers.py  services.py  tests.py  urls.py  views.py
credits/migrations/: 0001_initial.py  0002_alter_credit_is_differential_alter_credit_last_payed_and_more.py  0003_credit_period_alter_credit_last_payed.py
credits/templates/: credits.html  request_credit.html
finance_app/: mixins.py  settings.py  urls.py  wsgi.py
users/: forms.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_user_saving_account_alter_user_bank_account.py  0004_alter_user_saving_account.py  0005_user_access_key.py  0006_alter_user_access_key.py  0007_alter_user_bank_account_alter_user_saving_account.py
users/templates/: login.html  main.html  registration.html  users.html
